sidux-art-legacy (2009.01.1) unstable; urgency=low

  * Initial release.
  * add bootstrap.sh, to generate debian/control.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 19 Apr 2009 22:55:30 +0200